# Devhost

./: .gitignore  BENEFITS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PHASE5-PLAN.md  README.md  REVIEW.md  ROADMAP.md  TUI-COMPLETE-ENHANCEMENTS.md  blog_post.md  devhost  devhost.json  devhost.ps1  docker-compose.yml  install.py  install.sh  localhost.sh  pyproject.toml  test_palette.py
.github/: PUBLISHING.md  copilot-instructions.md
.github/prompts/: PLan.md.prompt.md  plan-devhostV3Architecture.prompt.md
.github/workflows/: ci.yml  publish.yml  security-scan.yml
caddy/: Caddyfile  Caddyfile.template
completions/: _devhost  devhost.bash
devhost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devhost_cli/: __init__.py  __main__.py  caddy.py  caddy_lifecycle.py  certificates.py  cli.py  config.py  diagnostics.py  executable_validation.py  factory.py  features.py  installer.py  logs.py  main.py  output.py  platform.py  proxy.py  router.py  router_manager.py  router_process.py  runner.py  scanner.py  state.py  structured_logging.py  subprocess_timeouts.py  tunnel.py  utils.py  validation.py  windows.py
devhost_cli/frameworks/: __init__.py  django.py  fastapi.py  flask.py
devhost_cli/middleware/: __init__.py  asgi.py  wsgi.py
devhost_cli/router/: __init__.py  cache.py  connection_pool.py  core.py  metrics.py  security.py  security_headers.py  utils.py
devhost_tui/: __init__.py  app.py  cli_bridge.py  commands.py  modals.py  services.py  session.py  widgets.py  wizard.py
devhost_tui/screens/: __init__.py  diagnostics.py  proxy.py  routes.py  settings.py  tunnels.py
docs/: INPUT-SANITIZATION-AUDIT.md  PHASE1-SUMMARY.md  PHASE3-PLAN.md  PHASE3-SUMMARY.md  PHASE4-PLAN.md  README.md  architecture.md  cli.md  configuration.md  external-proxy.md  getting-started.md  installation.md  modes.md  performance.md  phase4-completion-summary.md  phase4-quick-reference.md  publishing.md  security-configuration.md  troubleshooting.md  tui-architecture.md  tunnels.md  why.md
examples/: README.md  example_django.py  example_factory.py  example_fastapi.py  example_fastapi_middleware.py  example_flask.py  example_flask_socketio.py  example_full_integration.py  example_proxy.py  example_starlette.py  example_zero_config_fastapi.py  example_zero_config_flask.py  example_zero_config_generic.py
router/: Dockerfile  app.py  devhost-router.plist.tmpl  devhost-router.service.tmpl  devhost.json  macos-setup.md  requirements.txt
scripts/: setup-macos.sh  setup-windows.ps1
tests/: test_app.py  test_cache.py  test_cache_enhanced.py  test_caddy_lifecycle_timeouts.py  test_config_validation.py  test_connection_pool.py  test_diagnostics.py  test_executable_validation.py  test_factory.py  test_features.py  test_health_and_shutdown.py  test_input_length_limits.py  test_installer_helper.py  test_integration.py  test_metrics.py  test_middleware.py  test_proxy_header_sanitization.py  test_runner.py  test_security_certificates.py  test_security_defaults.py  test_security_headers.py  test_security_ssrf.py  test_structured_logging_and_metrics.py  test_subprocess_timeouts.py  test_target_parse.py  test_tui.py  test_utils.py  test_validation.py  test_wsgi.py
