[project]
name = "devhost"
version = "3.0.0-alpha.1"
description = "Lightweight local development domain router with ASGI and WSGI middleware support"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sebastian Gomez"}
]
keywords = ["development", "proxy", "router", "subdomain", "local", "middleware", "fastapi", "asgi", "wsgi", "flask", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Django",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development",
]

dependencies = [
    "rich >= 13.0",
    "pyyaml >= 6.0",
    "fastapi ~= 0.110",
    "uvicorn ~= 0.29",
    "httpx ~= 0.28",
    "websockets ~= 12.0",
    "requests ~= 2.31",
    "cryptography >= 41.0",
]

[project.optional-dependencies]
dev = [
    "pytest ~= 8.0",
    "ruff ~= 0.14.14",
]
tui = [
    "textual >= 0.47.0",
    "psutil >= 5.9",
    "watchdog >= 3.0",
]
tunnel = []
qr = [
    "segno >= 1.6",
]
all = [
    "pytest ~= 8.0",
    "ruff ~= 0.14.14",
    "textual >= 0.47.0",
    "psutil >= 5.9",
    "watchdog >= 3.0",
    "segno >= 1.6",
    "flask >= 2.0",
    "django >= 4.0",
]
fastapi = [
    "httpx ~= 0.28",
]
flask = [
    "flask >= 2.0",
]
django = [
    "django >= 4.0",
]

[project.urls]
Homepage = "https://github.com/Patoruzuy/devhost"
Documentation = "https://github.com/Patoruzuy/devhost#readme"
Repository = "https://github.com/Patoruzuy/devhost"
Issues = "https://github.com/Patoruzuy/devhost/issues"

[project.scripts]
devhost = "devhost_cli.main:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "N802",  # function name should be lowercase (we have msg_error, msg_success)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/*.py" = ["N802"]   # Allow non-lowercase function names in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devhost_cli*", "devhost_tui*"]
exclude = ["tests*", "caddy*", "router*", "completions*"]
